--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EQDwiwXkr9lP8/bhV5hCvQ
+# Checksum: sHRzdN3bOzzmmkRM56c/sw
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -411,7 +411,6 @@
 .clickad.pl/
 .clickbank.net/
 .clickcloud.info/
-.clickhype.
 .clickintext.
 .clickkingdom.
 .clicksor.
@@ -487,7 +486,6 @@
 .cpmadvisors.com/
 .cpmstar.com/view.aspx?
 .cpuim.com/
-.cpvfeed.
 .cpx24.com/
 .cpxinteractive.
 .crakmedia.com/sponsors/
@@ -495,7 +493,6 @@
 .crispads.
 .crocoads.com/
 .crowdgravity.com/
-.cumulusads.com/
 .cybermonitor.
 .dailymotion.com/masscast/
 .datepersonalsfree.com/images/banner
@@ -3011,7 +3008,6 @@ bunnypoker.com
 cams.com/go/
 cibleclick.
 cjt1.net/
-cognigen.net
 contextads.net/
 contextclick.
 contextuallinks.
@@ -3336,12 +3332,10 @@ http://click.absoluteagency.
 http://click.dtiserv2.com/
 http://click.paran.com/log.html?
 http://clickboothlnk.com/
-http://clicktrace.info/
 http://clickz.lonelycheatingwives.
 http://cluster.adultadworld.
 http://code.popup2m.com/
 http://codytzi.com/images/
-http://complex.com/takeovers/
 http://comunicazio.com/block.js
 http://connect.decknetwork.net/
 http://content-ads.
