--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sHRzdN3bOzzmmkRM56c/sw
+# Checksum: e0t/k7Er+hyynwd2as6uuw
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2031,6 +2031,7 @@
 /ewtrack.gif?
 /exit_popup.
 /exitpop.js
+/ext_ads.
 /external/ads/
 /external_ads.
 /extraMustard_topperIntro_
