--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: e0t/k7Er+hyynwd2as6uuw
+# Checksum: qza28f141d52UsKanzegoA
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -684,7 +684,6 @@
 .idg.com.au/files/skins/
 .idg.com.au/idg/fpromo/
 .idontlikeyouinthatway.com/mg
-.idregie.com/
 .ign.com/advertisers/
 .illimitux.net/js/abp.js
 .ilovecheating.com/ads/
@@ -3354,7 +3353,6 @@ http://delivery.adyea.com/
 http://design.deecash.com/
 http://dig.abclocal.go.com/PreRoll/
 http://digg.com/ad/
-http://digitadmedia.com/
 http://dinclinx.com/
 http://direct.quasir.
 http://divascam.com/
