--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qza28f141d52UsKanzegoA
+# Checksum: Ed2LtquytuKap7RNTFVh+w
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3369,7 +3369,6 @@ http://erotizer.info/iframe.
 http://euro4ads.de/
 http://exchangecash.de/
 http://exit.macandbumble.com/
-http://eyoob.com/elayer/
 http://fan-ads.
 http://fasttracktech.biz/
 http://fatads.toldya.com/
