--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Ed2LtquytuKap7RNTFVh+w
+# Checksum: uzJKv+NgL7Hw2XUl4avvsA
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -241,6 +241,7 @@
 .advertserve.
 .advertstatic.
 .advertstream.com/
+.ads.kelbymediagroup.com/
 .advg.jp/
 .adviva.net/
 .advolution.
@@ -443,6 +444,7 @@
 .com/adfile/
 .com/adimg/
 .com/adjs/
+.com/adpage/
 .com/Ads-
 .com/ads.
 .com/ads/
@@ -673,7 +675,6 @@
 .hover.in/
 .hsmclick.com/
 .html?wpl=
-.hypemakers.
 .hypernews.ru/
 .hypervre.
 .i-tech.com.au/Library/Image/Banner/
@@ -704,8 +705,6 @@
 .indianpad.com/user_promos/
 .indofad.com/
 .industrybrains.
-.inet-clix.
-.inet-traffic.
 .inetinteractive.
 .infinite-ads.
 .influads.com/
@@ -714,7 +713,6 @@
 .infoseek.co.jp/isweb/
 .infra-ad.com/
 .innity.com/
-.insenz.com/
 .insightexpress.
 .insitesystems.com/
 .inskinad.com/
@@ -722,7 +720,6 @@
 .intellitxt.
 .interclick.
 .internebula.net/
-.internet-ad.
 .interpolls.com/
 .intext.billboard.
 .investingchannel.
@@ -732,7 +729,6 @@
 .itpro.co.uk/images/skins/
 .itpro.co.uk/images/skins/
 .itslive.com/exports/
-.itsptp.com/
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
@@ -752,25 +748,19 @@
 .justcutegirls.com/banners/
 .justrelevant.com
 .kanoodle.com/
-.kaskus.us/banner/
 .kerg.net/
 .keymedia.hu/
-.keywordsconnect.
 .kindgirls.com/banners2/
 .kinghost.com/ban/
 .kirupa.com/supporter/
 .klicksponsor.de/
 .kliksaya.com/
 .klipmart.com/
-.kliptracker.
-.klixmedia.com/
-.koctekpopup.
 .kontera.
 .kqzyfj.com/images
 .ksoft.tv/vm18/uploads/sponsors/
 .kwot.biz/
 .lakequincy.
-.lasvegassun.com/adpage/
 .laxtime.com/rotation/
 .layerwelt.com/
 .lazygirls.info/ad_
@@ -792,7 +782,6 @@
 .linkexchange
 .linkgrand.
 .linkreferral.com/images/
-.linkshare.
 .linkstorm.net/
 .linksynergy.com/fs/banners/
 .linkz.net/
@@ -839,7 +828,6 @@
 .mediaplex.com/ad/js/
 .mediapromoter.net/
 .mediarotator.ru/
-.mediatext.
 .mediatraffic.com/
 .meetic-partners.com/call/adj/
 .megaban.com.ua/
@@ -2033,7 +2021,6 @@
 /ext_ads.
 /external/ads/
 /external_ads.
-/extraMustard_topperIntro_
 /facebooksex
 /fc_ads/
 /feeds/jobroll/?
@@ -2082,6 +2069,7 @@
 /getADDs.aspx?
 /getAds-
 /getAds.htm
+/getads.php
 /getads.js
 /getAds/
 /getAdServer.
@@ -3400,7 +3388,6 @@ http://girlsofdesire.org/banner/
 http://glamour.cz/banners/
 http://glean.pop6.com/
 http://gws.ign.com/
-http://hfimage.head-fi.org/sponsors/
 http://hjlas.com/images/
 http://hostedads.
 http://hosting.conduit.com/
@@ -3425,13 +3412,11 @@ http://img.pornbb.org/live_ads.js
 http://img.pulsemgr.com/pm/?
 http://img.pulsemgr.com/script/
 http://img.tradepub.com/images/
-http://info.clipta.com/informer/?
 http://inheart.ru/welove/
 http://iv.doubleclick.net/adj/
 http://ivitrine.buscape.com/
 http://jbrlsr.com/
 http://jmn.jangonetwork.
-http://jobs.ajaxian.com/
 http://jobsyndicate.com/
 http://js.picsomania.info/
 http://jsads.
@@ -3475,7 +3460,6 @@ http://megavideo.com/unruley
 http://mfeed.newzfind.com/
 http://mg.dt00.net/
 http://minibn.ipmart.com/
-http://mixmarket.biz/show/
 http://moe.jlist.com/media/
 http://motherless.com/images/banners/
 http://n4403ad.
@@ -3711,11 +3695,8 @@ https://view.atdmt.
 images/ads/
 img.freexxxpages.net/z/
 innerads
-instacontent.net
-keyrun.com/
 LargeFlashAd.js
 left-ads
-lienket247.com/
 link-exchange
 network.stripplayer
 newnudecash.com/webmasters/
