--- a/easylistfanboy/iron/adblock-vtn.ini
+++ b/easylistfanboy/iron/adblock-vtn.ini
@@ -6,6 +6,7 @@
 .bacsi.com/images/banners/    
 .bacsi.com/templates/news-ok/images/testbg.
 .bongda.com.vn/data/File/
+.fptad.com/
 .game8.vn/spirit/ads/banner_
 .hanoimoi.com.vn/Uploads/NCC/
 .ledmobile.net/ads/
