--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uzJKv+NgL7Hw2XUl4avvsA
+# Checksum: hedI9RPp40RBhJlTWmrP2A
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -854,7 +854,6 @@
 .mofosex.com/footer-
 .money4ad.com
 .moregamers.
-.mporatrons.com/loadres/images/sponsored/
 .mrskin.com/feeds/
 .mrskin.com/js_feeds.
 .mrskincash.com/
@@ -876,7 +875,6 @@
 .nastydollars.com/hosted/geo/
 .nastydollars.com/sts/banners/
 .natuko-miracle.com/banner/
-.ncsreporting.
 .nearlygood.com/inc/_aff.php?
 .neodatagroup.com/
 .neoseeker.com/a_pane.php?
@@ -972,8 +970,6 @@
 .pjtra.com/b/
 .pl/reklama/
 .placepictures.com/Frame.aspx?
-.planetaads.com/
-.planetdiscover.
 .platinumadvertisement.
 .plugrush.com/
 .pntra.com/b/
@@ -2330,7 +2326,6 @@
 /phpadserver/
 /phpAdsNew/
 /phpadsnew/
-/pic.pbsrc.com/sponsor/
 /pix/ads/
 /pixel?id=
 /plcornerswf.swf?
