--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -28,6 +28,7 @@
 .adidas.com/adidasAnalytics/
 .agencytradingdesk.net/
 .aggregateknowledge.
+.aimatch.com/
 .alenty.com/trk/
 .alexametrics.
 .allexperts.com/px/
