--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hedI9RPp40RBhJlTWmrP2A
-# Updated: 19 Aug 2010
+# Checksum: HaAWSj/hdIBof+zFmdUPoA
+# Updated: 20 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1039,8 +1039,7 @@
 .sbs-ad.com/
 .scoop.co.nz/xl?c
 .se/adx.js
-.searchfeed.
-.searchpixie.
+.supernovatube.com/spark.
 .sella.co.nz/file/
 .sendspace.com/defaults/framer.html?
 .serving-sys.
@@ -1083,18 +1082,14 @@
 .sociallypublish.com/publish/
 .socialmedia.com/
 .softcab.com/google.php?
-.somethingawful.com/b.
 .sophus3.
 .sparkstudios.
-.specialsuggestion.
 .specificclick.
 .specificmedia.
 .spiderhood.net/
 .spinbox.net/
 .sponsor4cash.de/script/
 .sponsorads.
-.sponsorpagos.
-.sponsorselect.
 .spottt.com/
 .spunkycash.
 .sterrencash.
@@ -1296,6 +1291,7 @@
 /120x240_
 /120x600.
 /120x600/
+/120-600.
 /120x600_
 /125x125-
 /125x125/
@@ -2389,7 +2385,6 @@
 /ruby_iframe_
 /rule34/ads/
 /rule34v2/ads/
-/safetrackonline.biz/
 /ScanScout.
 /ScanScoutPlugin.
 /scripts/ad-
@@ -2476,6 +2471,7 @@
 /static.addtoany.com/
 /static.terrhq.ru/
 /static/ad_
+/static/ads/
 /static_ads/
 /sticky_ad.js
 /stickyad.js
@@ -3551,16 +3547,12 @@ http://s.trigami.
 http://s.xvideos.com/
 http://sa-m.streamads.com/view?
 http://sa.entireweb.com/
-http://safemanuals.com/shopping/
 http://scripts.atmalinks.com/
 http://search.spotxchange.com/flash/
 http://servali.net/
 http://sev4ifmxa.com/image/
-http://share-now.net/layer/
 http://shared.juicybucks.
 http://sher.index.hu/
-http://shops.tgdaily.com/?search
-http://siftad.
 http://slickdeals.meritline.com/live
 http://slutdrive.com/img/bgf_
 http://smartad.
@@ -3661,7 +3653,6 @@ http://www.npplpoker.com.au/images/frontpage/corporate_ban
 http://www.p2pnet.net/images/
 http://www.physorg.com/banner/
 http://www.porno-file.ru/uploads/
-http://www.pro-clockers.com/images/banners/
 http://www.proxies2u.com/images/btn/
 http://www.proxyroll.com/proxybanner.
 http://www.regnow.com/
