--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -521,6 +521,7 @@
 .se/counter/
 .se/log/?
 .sec-web.com/stats/
+.securewebsiteaccess.com/log/
 .sedotracker.
 .seemore.ru/js/
 .serverkompetenz.net/cpx.php?
@@ -543,7 +544,7 @@
 .smrtlnks.com/
 .snoobi.com/
 .sometrics.
-.sonicservices.
+.sonicservices
 .speed-trap.com/
 .sprintrade.com/
 .spylog.com/
