--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HaAWSj/hdIBof+zFmdUPoA
+# Checksum: 7j7zDq4aEOVzSClMpOHauQ
 # Updated: 20 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2898,6 +2898,7 @@ _ad_code.
 _ad_content.
 _ad_footer
 _ad_iframe.
+_adjug.js
 _ad_label.gif
 _ad_middle_
 _ad_one.html?
