--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
- # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 7j7zDq4aEOVzSClMpOHauQ
+f # Fanboy's Adblock list (Iron-Chrome)
+# Checksum: z5kPJrAPLZidNrP74iS6sg
 # Updated: 20 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -75,6 +75,7 @@
 .247realmedia.
 .2dpt.com/
 .2mdn.net/
+.3yen.com/wfn_
 .300x250_
 .468x60.
 .480x60.
@@ -458,6 +459,7 @@
 .com/advt/
 .com/adx.js
 .com/affiliate/
+.com/awe.js
 .com/banners/
 .com/doubleclick/
 .com/fullad
@@ -1114,7 +1116,6 @@
 .swiftco.net/banner/
 .symbiosting.com/LogicBuy/
 .targetpoint.com/
-.targetsaver.
 .targetspot.com/player/
 .tattomedia.
 .tbn.ru/
@@ -1130,7 +1131,6 @@
 .textads.
 .thehun.net/overflow/banners/
 .thewebgemnetwork.com/
-.thinktarget.
 .thumbcow.com/livebanner/
 .tidaltv.com/
 .timesonline.co.uk/date/profiles/
@@ -1181,7 +1181,6 @@
 .turboimagehost.com/p.js?
 .twistyscash.com/banner/
 .twofuckers.com/brazzers
-.txtswap.
 .ucoz.net/popup/
 .uff5.to/
 .ugo.com/takeover/
@@ -1273,7 +1272,6 @@
 .yuppads.com/
 .yzrnur.com/
 .zangocash.com/
-.zazzle.com/utl/getpanel?
 .zde-engage.com/
 .zdnet.de/ads/
 .zedo.com/
@@ -1753,6 +1751,7 @@
 /adstorage.
 /adStreamJSController.
 /adstubs/
+/adstatic/
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
@@ -2297,6 +2296,7 @@
 /pagepeel.
 /pagepeel/
 /pagepeel_
+/pageCurl/
 /PagePeelAd
 /pages/ads/
 /pages/ads_
@@ -2456,6 +2456,7 @@
 /sponsored-links-
 /sponsored_ad
 /sponsored_by.
+/SponsoredContent.
 /sponsored_links1.js
 /sponsored_links_
 /sponsored_listings.html?
@@ -3610,23 +3611,19 @@ http://u-ads.adap.tv/
 http://unicast.ign.com/assets/
 http://uploads.forumwarz.com/
 http://vadpay.com/banner?
-http://vadpay.com/images/
 http://vas.ppro.de/
 http://video-people.com/img/
 http://video.unrulymedia.com/iframe_
 http://videos.theonion.com/ads/
 http://view.atdmt.
 http://void.flirt4e.com/
-http://vst.vstseed.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
 http://webads.
 http://web-adservice.com/
-http://webtraffic.ttinet.com/
 http://wendi.com/ipt/
 http://werbung.
 http://widget.plugrush.com/track/
-http://widgets.shopping.com/widget/
 http://worthplaying.com/ad_
 http://wrapper.ign.com/
 http://www.4link.it/banners/
@@ -3661,8 +3658,6 @@ http://www.rejournal.com/images/banners/
 http://www.rejournal.com/ne/images/homepage
 http://www.rejournal.com/users/Blinks/
 http://www.seemygf.com/webmasters/iframe/
-http://www.tripadvisor.com/adp/
-http://www.whistleout.com.au/Widgets/
 http://x7.to/
 http://xban.
 http://xcabin.net/b/
@@ -3716,10 +3711,8 @@ sz=47x47;
 text.burstnet
 totemcash.com/
 tyroo.com/
-vcmleads.com/
 vibrantmedia.
 vs20060817.com/
 worlddatinghere.com
 yceml.net
 yieldx.com/
-zoomdirect.com.
