--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: z5kPJrAPLZidNrP74iS6sg
+# Checksum: /3FkPNmDCpHUh7Nh7SHEbg
 # Updated: 20 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2949,6 +2949,7 @@ _rmadv.
 _site_sponsor
 _textlinkspot.
 _topad.php
+_text_ads.
 _web_adhoc?
 _webbanner_
 Ad468x60
