--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /3FkPNmDCpHUh7Nh7SHEbg
-# Updated: 20 Aug 2010
+# Checksum: Zokdr+nhPutISkrF0J3+cA
+# Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3125,6 +3125,7 @@ http://ads.eagletribune.com/
 http://ads.focus-news.net/
 http://ads.gather.com/
 http://ads.glamourbabe.info/
+http://ads.worldgolf.com/
 http://ads.globeandmail.com/
 http://ads.gravytrainproductions.
 http://ads.greenerworldmedia.com/
