--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Zokdr+nhPutISkrF0J3+cA
+# Checksum: TvcHKNoXjiGitO2vT1XlbA
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3582,7 +3582,6 @@ http://stats-analytics.info/
 http://stats.buzzparadise.
 http://stocker.bonnint.
 http://store.androidcommunity.com/external_marketing/
-http://stream11.instream.com/
 http://stuff.tv/Client/Skinning/
 http://switch.atdmt.
 http://synad2.
