--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TvcHKNoXjiGitO2vT1XlbA
+# Checksum: SS98Ra4E1MtZaAZnaFucbA
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -967,6 +967,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .php?affid=
 .picadmedia.
 .pinballpublishernetwork.
+.pinknews.co.uk/newweb/
 .pixazza.com/metadata/?
 .pjatr.com/b/
 .pjtra.com/b/
