--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SS98Ra4E1MtZaAZnaFucbA
+# Checksum: yOOkJkckjMPX7n1YcQDhSA
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -336,7 +336,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .biemedia.
 .bigpond.com/home/skin_
 .bigpond.com/specials/widgets/specials/
-.bigtube.com/iframes/
 .bin-layer.de/
 .binlayer.com/
 .binlayer.de/
@@ -2567,7 +2566,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /xbanner.php?
 /xcdn.xgraph.net/
 /xhr/ad/
-/y07m06d22_files/adopt.
 /yaboe_banner_
 /yahoo-ads/
 /yahooFeedProxy.
@@ -2987,7 +2985,6 @@ bannerad_
 bannerid=
 bantex.ru/
 bravenetmedianetwork.
-bunnypoker.com
 cams.com/go/
 cibleclick.
 cjt1.net/
@@ -3293,7 +3290,6 @@ http://bugaga.tut.by/
 http://burnsoftware.info/
 http://bwp.
 http://c.castanet.net/
-http://c.porngraph.
 http://c.timeanddate.com/
 http://cache.worldfriends.tv/
 http://camleyads.info/
