--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: yOOkJkckjMPX7n1YcQDhSA
+# Checksum: hCA1F5QURg7aoSVCrxEvdA
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3499,6 +3499,7 @@ http://plantaosexy.com/
 http://playlist.yahoo.com/makeplaylist.dll?
 http://pmsrvr.com/click/display
 http://pop-bazar.net/
+http://popadscdn.net/
 http://poponclick.com/
 http://pops.freeze.com/
 http://popurls.com/ad/
