--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hCA1F5QURg7aoSVCrxEvdA
+# Checksum: V+FhUPocw9WE5labospEHg
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -917,7 +917,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .northmay.
 .novoporn.com/imagelinks/
 .nrs-group.
-.nsimg.net/
 .nubiles.net/webmasters/promo/
 .nude.hu/banners/
 .nude.hu/html/
@@ -3304,6 +3303,7 @@ http://cdn.assets.
 http://cdn.cpmstar.com/
 http://cdn.doubleclick.
 http://cdn.eyewonder.com/
+http://cdn.nsimg.net/
 http://cdn.liverail.com/adasset/
 http://cdn.unicast.msn.com/
 http://cdns.webcams.com/e2
