site: http://www.pontoperdido.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: V+FhUPocw9WE5labospEHg
+# Checksum: 2/7QvuHuAoDguseyLSZFmg
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2246,6 +2246,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /mstextad?
 /mtvi_ads_
 /myfreepaysitebanner.asp
+/naiad.js
 /neoads.js?
 /network_ad.
 /NeudesicAd.
