--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2/7QvuHuAoDguseyLSZFmg
+# Checksum: fIYxWagGqEkb+KasjXPX2w
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2161,6 +2161,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /img/728_90
 /img/_ad.
 /img/ad_
+/img/ad/
 /img/ads/
 /img/adv/
 /img/advertis
