--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: fIYxWagGqEkb+KasjXPX2w
+# Checksum: 5LnlBwzsUcZU80lWM1Jl1w
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1372,6 +1372,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /480x030_
 /496_98_
 /600_120_
+/600x160_
 /600_90_
 /600x90.
 /60x468.
@@ -1838,6 +1839,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /ban.php?
 /BanMan/
 /banman/
+/bannerPump.
 /banner-ad
 /banner.asp?
 /banner.ca?
@@ -3015,6 +3017,7 @@ http://69.31.136.5/funfun/s.php?
 http://75.101.129.47/
 http://75.126.76.32/ads/
 http://77.238.174.11/
+http://77.247.178.36/
 http://83.149.103.111/
 http://84.234.22.104/ads/
 http://85.17.145.107/
@@ -3299,7 +3302,6 @@ http://cas.clickability.
 http://cash.femjoy.com/
 http://cash.neweramediaworks.com/
 http://cash4movie.com/bilder/
-http://cashad2
 http://cashtraff.com/selljs/
 http://cdn.assets.
 http://cdn.cpmstar.com/
