--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -260,6 +260,7 @@
 .funstage.com/
 .generaltracking.de/
 .geo.yahoo.com/
+.geo.kontagent.net/
 .geobytes.com/gd?
 .geovisite.com
 .glanceguide.
@@ -521,7 +522,6 @@
 .se/counter/
 .se/log/?
 .sec-web.com/stats/
-.securewebsiteaccess.com/log/
 .sedotracker.
 .seemore.ru/js/
 .serverkompetenz.net/cpx.php?
