--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5LnlBwzsUcZU80lWM1Jl1w
+# Checksum: werUtUSao9Kh89E6jBxsSQ
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1547,6 +1547,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /adcolo.com/
 /adcompany
 /adContent.
+/adcontrol.
 /AdController.
 /adcount.
 /adcreative/
@@ -2188,6 +2189,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /insertAds.
 /iplgadshow
 /j/ads.js
+/JavaScript/Ads/
 /js.ng/c
 /js.ng/p
 /js.ng/s
