--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: werUtUSao9Kh89E6jBxsSQ
+# Checksum: 6G49JkXSwlO6Ke6prgcjlg
 # Updated: 21 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2543,6 +2543,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /view_banner.asp?
 /viewer/rad?
 /virtuagirl
+/vert_ad.
 /virtual_girl_
 /virtualgirl/
 /vm_ad_feed.php?
