--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -588,6 +588,7 @@
 .themis.yahoo.com/a?
 .thespringbox.com/analytics/
 .thinkgeek.com/js/rts.js
+.thismoment.com/tracking/
 .tiser.com
 .titag.com/
 .tns-counter.
