--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6G49JkXSwlO6Ke6prgcjlg
-# Updated: 21 Aug 2010
+# Checksum: HktdJZD1AtyP9gXEN1Qqsw
+# Updated: 22 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3418,7 +3418,6 @@ http://jbrlsr.com/
 http://jmn.jangonetwork.
 http://jobsyndicate.com/
 http://js.picsomania.info/
-http://jsads.
 http://jsg.dt00.net/
 http://kaktuz.com/banner/
 http://kenny-glenn.net/images/longbanner_
