--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HktdJZD1AtyP9gXEN1Qqsw
+# Checksum: 74roC/5vqYCiIBIZ5o9GDg
 # Updated: 22 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1232,7 +1232,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .worldsex.com/c/
 .ws/banners/
 .wsex.com/mediaserver/
-.wtfpeople.com/banners_
 .x-adservice.com/
 .xcelltech.com/ad/
 .xchangebanners.
