--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 74roC/5vqYCiIBIZ5o9GDg
-# Updated: 22 Aug 2010
+# Checksum: EvfWuwRuJ+rU0L08juGveg
+# Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -538,7 +538,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .easyrencontre.com/promo/
 .easytrader.bg/
 .ebannertraffic.com/
-.ebayrtm.com/rtm?RtmCmd&
+.ebayrtm.com/rtm?RtmCmd&a
 .ebuzzing.com/
 .ecom.js
 .ecommerce-journal.com/specdata.php?
