--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EvfWuwRuJ+rU0L08juGveg
-# Updated: 23 Aug 2010
+# Checksum: W8vQslS37Gw0Vqsoo5SIPQ
+# Updated: 22 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -75,8 +75,8 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .247realmedia.
 .2dpt.com/
 .2mdn.net/
-.3yen.com/wfn_
 .300x250_
+.3yen.com/wfn_
 .468x60.
 .480x60.
 .4tube.com/iframe/
@@ -158,6 +158,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .admarketplace.
 .admatik.pl/
 .admaxserver.com/
+.admaya.in/
 .adme.ru/
 .admeld.com/
 .admeta.
@@ -165,7 +166,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .admob.com/
 .admonkey.dapper.net/
 .admpads.com/
-.admaya.in/
 .adnet.de/
 .adnet.vn/
 .adnxs.com/
@@ -188,6 +188,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .adroll.com/
 .adru.net/
 .ads.darla.
+.ads.kelbymediagroup.com/
 .ads.netlog.com/
 .ads.pof.com/
 .ads01.com/
@@ -242,7 +243,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .advertserve.
 .advertstatic.
 .advertstream.com/
-.ads.kelbymediagroup.com/
 .advg.jp/
 .adviva.net/
 .advolution.
@@ -998,9 +998,9 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .privacyprotector.
 .privatamateure.com/
 .profitstat.biz/
-.promobenef.com/
 .program3.com/
 .projectwonderful.
+.promobenef.com/
 .pulse360.com/
 .qksrv.net/
 .qksz.net/
@@ -1040,7 +1040,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .sbs-ad.com/
 .scoop.co.nz/xl?c
 .se/adx.js
-.supernovatube.com/spark.
 .sella.co.nz/file/
 .sendspace.com/defaults/framer.html?
 .serving-sys.
@@ -1106,6 +1105,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .suitesmart.com/
 .sunnysmedia.com/links/
 .superclix.de/
+.supernovatube.com/spark.
 .surveymonkey.com/jsPop.aspx?
 .surveywriter.net/in/survey/
 .sweetmedia.org/
@@ -1206,6 +1206,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .virtual-hideout.net/ads/
 .virtual-hideout.net/banner
 .visit-x.net/promo/
+.vitalads.net/
 .vn/banner/
 .vod-cash.
 .voyeurweb.com/ads/
@@ -1281,13 +1282,13 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .zxxds.net/
 /.adserv/
 //ptrfc.com/
+/120-600.
 /1200x70_
 /120600.
 /120_600.
 /120x240_
 /120x600.
 /120x600/
-/120-600.
 /120x600_
 /125x125-
 /125x125/
@@ -1371,8 +1372,8 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /480x030_
 /496_98_
 /600_120_
-/600x160_
 /600_90_
+/600x160_
 /600x90.
 /60x468.
 /640x100/
@@ -1405,9 +1406,9 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /760x90_
 /768x90.
 /80x468_
+/900x130_
 /900x350_
 /960_60_
-/900x130_
 /985x120_
 /?adv_partner
 /_include/ads/
@@ -1746,12 +1747,12 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /adsrv/js/
 /adss.asp
 /AdsSrv.html?adpos=
+/adstatic/
 /AdsTemplate/
 /adstop.
 /adstorage.
 /adStreamJSController.
 /adstubs/
-/adstatic/
 /adSwap.js
 /adsWrapper.js
 /adsx/www/
@@ -1839,7 +1840,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /ban.php?
 /BanMan/
 /banman/
-/bannerPump.
 /banner-ad
 /banner.asp?
 /banner.ca?
@@ -1872,6 +1872,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /bannerman/
 /bannerManager/
 /bannermvt.php?
+/bannerPump.
 /banners.affiliate
 /banners.cgi?
 /banners.js
@@ -2061,8 +2062,8 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /getADDs.aspx?
 /getAds-
 /getAds.htm
-/getads.php
 /getads.js
+/getads.php
 /getAds/
 /getAdServer.
 /GetAdvertImage
@@ -2162,8 +2163,8 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /img/468_60
 /img/728_90
 /img/_ad.
-/img/ad_
 /img/ad/
+/img/ad_
 /img/ads/
 /img/adv/
 /img/advertis
@@ -2294,13 +2295,13 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /pagead/adview
 /pagead/gen_
 /pageadimg/
+/pageCurl/
 /pageear.js
 /pageear/
 /pageear_
 /pagepeel.
 /pagepeel/
 /pagepeel_
-/pageCurl/
 /PagePeelAd
 /pages/ads/
 /pages/ads_
@@ -2460,10 +2461,10 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /sponsored-links-
 /sponsored_ad
 /sponsored_by.
-/SponsoredContent.
 /sponsored_links1.js
 /sponsored_links_
 /sponsored_listings.html?
+/SponsoredContent.
 /sponsoredlinks
 /SponsoredLinksIFrame
 /sponsors/amg.php?
@@ -2510,9 +2511,9 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /tmo/ads/
 /toigoogleads.
 /top_ad.
-/top_ads.
 /top_ad/
 /top_ad_
+/top_ads.
 /top_adv_
 /TopAd.aspx
 /topad.htm
@@ -2532,6 +2533,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /upads.info/
 /uploads/ads/
 /valueclick
+/vert_ad.
 /vertical_advert
 /vghd.gif
 /vghd.swf
@@ -2542,7 +2544,6 @@ f # Fanboy's Adblock list (Iron-Chrome)
 /view_banner.asp?
 /viewer/rad?
 /virtuagirl
-/vert_ad.
 /virtual_girl_
 /virtualgirl/
 /vm_ad_feed.php?
@@ -2903,7 +2904,6 @@ _ad_code.
 _ad_content.
 _ad_footer
 _ad_iframe.
-_adjug.js
 _ad_label.gif
 _ad_middle_
 _ad_one.html?
@@ -2913,6 +2913,7 @@ _ad_renderer_
 _adcall.php/
 _adcom.php?
 _adengage_
+_adjug.js
 _adlog.asp?
 _adRight.
 _Ads/InHouse
@@ -2951,9 +2952,9 @@ _reporting_ads.
 _right_ad.
 _rmadv.
 _site_sponsor
+_text_ads.
 _textlinkspot.
 _topad.php
-_text_ads.
 _web_adhoc?
 _webbanner_
 Ad468x60
@@ -3061,6 +3062,7 @@ http://ad.sensismediasmart.
 http://ad.sharethis.com/
 http://ad.slutload.com/
 http://ad.smart.ru/
+http://ad.sponsoreo.com/
 http://ad.terra.com
 http://ad.uk.doubleclick.net/ad
 http://ad.valuecalling.com/
@@ -3068,7 +3070,6 @@ http://ad.wsod.com/
 http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
-http://ad.sponsoreo.com/
 http://ad0.
 http://ad1
 http://ad2.
@@ -3129,7 +3130,6 @@ http://ads.eagletribune.com/
 http://ads.focus-news.net/
 http://ads.gather.com/
 http://ads.glamourbabe.info/
-http://ads.worldgolf.com/
 http://ads.globeandmail.com/
 http://ads.gravytrainproductions.
 http://ads.greenerworldmedia.com/
@@ -3184,6 +3184,7 @@ http://ads.tweetmeme.com/
 http://ads.undertone.com/
 http://ads.uploading.com/
 http://ads.w3hoster.de/
+http://ads.worldgolf.com/
 http://ads.xhamster.com/
 http://ads.yimg.
 http://ads.yimg.com/
@@ -3309,8 +3310,8 @@ http://cdn.assets.
 http://cdn.cpmstar.com/
 http://cdn.doubleclick.
 http://cdn.eyewonder.com/
-http://cdn.nsimg.net/
 http://cdn.liverail.com/adasset/
+http://cdn.nsimg.net/
 http://cdn.unicast.msn.com/
 http://cdns.webcams.com/e2
 http://celebritypink.com/bannedcelebs-
@@ -3623,8 +3624,8 @@ http://view.atdmt.
 http://void.flirt4e.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
-http://webads.
 http://web-adservice.com/
+http://webads.
 http://wendi.com/ipt/
 http://werbung.
 http://widget.plugrush.com/track/
