--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: W8vQslS37Gw0Vqsoo5SIPQ
+# Checksum: 6VKGfzkzFKqZMgArOUg2Mg
 # Updated: 22 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -662,6 +662,7 @@ f # Fanboy's Adblock list (Iron-Chrome)
 .grapeshot.co.uk/
 .grapevine.is/Media/Flash/
 .hardsextube.com/ads-
+.hdtvtest.co.uk/partner/pricerunner.php?
 .hentaibiz.com/b/
 .hipals.com/cgi-bin/
 .hit-now.com/
