--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -221,6 +221,7 @@
 .e-referrer.com/
 .easyranking.de/
 .easyresearch.se
+.ebayrtm.com/rtm?RtmIt&ite
 .ectnews.com/shared/missing.gif?
 .effectivemeasure.
 .elitics.com/
@@ -259,8 +260,8 @@
 .freshdeals.com/click/pixel.gif?
 .funstage.com/
 .generaltracking.de/
-.geo.yahoo.com/
 .geo.kontagent.net/
+.geo.yahoo.com/
 .geobytes.com/gd?
 .geovisite.com
 .glanceguide.
@@ -1616,8 +1617,8 @@ http://seal.ranking.
 http://search128.com/search.
 http://seedspill.com/sug.php?
 http://service.newstogram.com/
-http://siteskan.com/
 http://sig.gamerdna.com/
+http://siteskan.com/
 http://smfsvc.com/
 http://smileyhost.net/
 http://socialspark.com/images/
