--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6VKGfzkzFKqZMgArOUg2Mg
-# Updated: 22 Aug 2010
+# Checksum: N5XwcsERWGOOIbUtcJ9wjA
+# Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3503,7 +3503,6 @@ http://pixxtra.com/ad/
 http://pixxtra.com/js/popup
 http://pixxtra.com/sound/
 http://plantaosexy.com/
-http://playlist.yahoo.com/makeplaylist.dll?
 http://pmsrvr.com/click/display
 http://pop-bazar.net/
 http://popadscdn.net/
