--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
-f # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: N5XwcsERWGOOIbUtcJ9wjA
+# Fanboy's Adblock list (Iron-Chrome)
+# Checksum: eI+yOAJ6dFM5yDdk5/cqFw
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
