--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eI+yOAJ6dFM5yDdk5/cqFw
+# Checksum: KBnRTny+tljF2qrhEnWpRw
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1919,6 +1919,7 @@
 /bnrsrv.ashx?
 /borax.geo-idm.fr/
 /bottom_adv_
+/body_background_ad/
 /BottomAd.
 /bravenet/images/
 /buttonad/
