site: http://www.raymond.cc/blog/archives/2010/08/18/free-50-emsisoft-anti-malware-5-0-full-license/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KBnRTny+tljF2qrhEnWpRw
+# Checksum: spGFRe3Y6ruCu5sgPAVdYw
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -372,8 +372,7 @@
 .burstnet.akadns.net/gifs/
 .business.com/images2/directory.gif?
 .businessclick.
-.buxflow.com/
-.buysellads.                                          
+.buxflow.com/                                         
 .buzznet.com/topscript.js.php?
 .c-on-text.com/
 .c8.net.ua/
@@ -3554,6 +3553,7 @@ http://ruleclaim.web.
 http://russkoexxx.com/ban/
 http://s.trigami.
 http://s.xvideos.com/
+http://s3.buysellads.com/
 http://sa-m.streamads.com/view?
 http://sa.entireweb.com/
 http://scripts.atmalinks.com/
