--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: spGFRe3Y6ruCu5sgPAVdYw
+# Checksum: kT/Shdlr0ZIot/DpCzgLNg
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1916,9 +1916,9 @@
 /bnr/bnr-
 /bnrimg.php
 /bnrsrv.ashx?
+/body_background_ad/
 /borax.geo-idm.fr/
 /bottom_adv_
-/body_background_ad/
 /BottomAd.
 /bravenet/images/
 /buttonad/
@@ -3120,6 +3120,7 @@ http://ads.aol.co.uk/
 http://ads.blogherads.
 http://ads.boksy.
 http://ads.brazzers.com/
+http://ads.buzzcity.net/
 http://ads.buzzcity.net/
 http://ads.com.com/
 http://ads.contentabc.com/
