--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -38,6 +38,7 @@
 /ranks.cgi?ID=
 /reghit.asp?
 /stats.php?
+/stats/useronline.php?
 /trackclick.
 /trackdirect.php?
 /trackLT.asp?
@@ -45,7 +46,9 @@
 http://ads.webindia123.com/
 http://azadmob.in/
 http://besttop.mobi/
+http://c.wen.ru/
 http://contentxn.com/
+http://countreg.com/
 http://statistics.infowap.info/
 http://stats.ozwebsites.biz/
 http://thinakkural.com/web_advers/
