--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -21,6 +21,7 @@
 .netklix.com/
 .samachar.com/730x90_
 .sensongs.com/NFls/
+.smaato.net/
 .songs.pk/125body.
 .tamilisai.net/pub.
 .tamilkurinji.com/wanted_ads.
