--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -2,6 +2,7 @@
 .addynamo.com/
 .admagnet.net/
 .ads.sampurn.com/
+.adtwirl.com/
 .amobee.com/
 .apniisp.com/glinks.
 .axill.in/
@@ -48,6 +49,7 @@
 http://ads.webindia123.com/
 http://azadmob.in/
 http://besttop.mobi/
+http://c.waplog.net/
 http://c.wen.ru/
 http://contentxn.com/
 http://countreg.com/
