--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -6,6 +6,7 @@
 .amobee.com/
 .apniisp.com/glinks.
 .axill.in/
+.c-stat.eu/
 .co.uk/advt/
 .com/bAds/
 .com/images/advt/
@@ -60,6 +61,7 @@ http://stats.ozwebsites.biz/
 http://thinakkural.com/web_advers/
 http://top.nash-kovcheg.ru/
 http://topindia.org/cou.php?
+http://vivamob.net/
 http://waptrack.net/
 http://www.lankasri.eu/clients/
 http://www.musicmaza.com/banner
