--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -17,6 +17,7 @@
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
+.mobpartner.mobi/
 .mojiva.com/
 .monsoonads.
 .net-filter.com/
