--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -3,6 +3,7 @@
 .admagnet.net/
 .ads.sampurn.com/
 .adtwirl.com/
+.adzmob.com/
 .amobee.com/
 .apniisp.com/glinks.
 .axill.in/
@@ -17,6 +18,7 @@
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
+.mkhoj.com/
 .mobpartner.mobi/
 .mojiva.com/
 .monsoonads.
