--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kT/Shdlr0ZIot/DpCzgLNg
+# Checksum: C0hwDXq5g56CraNNKLSVSA
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3323,6 +3323,7 @@ http://click.paran.com/log.html?
 http://clickboothlnk.com/
 http://clickz.lonelycheatingwives.
 http://cluster.adultadworld.
+http://cnetwidget.creativemark.co.uk/
 http://code.popup2m.com/
 http://codytzi.com/images/
 http://comunicazio.com/block.js
