revert redudant filter adzilla #7091

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: C0hwDXq5g56CraNNKLSVSA
+# Checksum: DX8yiUWr65agpPKPb5UyqQ
 # Updated: 23 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3393,7 +3393,6 @@ http://gws.ign.com/
 http://hjlas.com/images/
 http://hostedads.
 http://hosting.conduit.com/
-http://howtogeek.com/go/
 http://hwbot.org/banner.
 http://iframe.adultfriendfinder.
 http://iframe.mediaplazza.
