--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DX8yiUWr65agpPKPb5UyqQ
-# Updated: 23 Aug 2010
+# Checksum: IUYmC5y65mjJw3XTlvB/pA
+# Updated: 24 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2374,6 +2374,7 @@
 /relatedads
 /remove_ads.
 /remove_ads2.
+/retrad.
 /RequestAdvertisement.
 /richOAS.
 /right_ad.
