--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: IUYmC5y65mjJw3XTlvB/pA
-# Updated: 24 Aug 2010
+# Checksum: MeMxqIwLmnzXp2z+0Kca6w
+# Updated: 25 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3274,6 +3274,7 @@ http://banners.itweb.co.za/
 http://banners.ixitools.
 http://banners.moreniche.com/show.
 http://banners.partypartners.com/
+http://banners.passion.com/
 http://banners.penthouse.com/
 http://banners.rushcommerce.com/
 http://banners.videosz.com/
