--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: MeMxqIwLmnzXp2z+0Kca6w
+# Checksum: Is10pCfmYa7dZC7t0lyAiA
 # Updated: 25 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1433,6 +1433,7 @@
 /ad-leaderboard
 /ad-middle
 /ad-openx.
+/ad-refresh-
 /ad-server/
 /ad-skyscraper
 /ad-square
