--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 90yjZnbK3hWOghNfGz2YEg
+# Checksum: Is10pCfmYa7dZC7t0lyAiA
 # Updated: 25 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1434,7 +1434,6 @@
 /ad-middle
 /ad-openx.
 /ad-refresh-
-/adsense-
 /ad-server/
 /ad-skyscraper
 /ad-square
