move ind en filters to main

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Is10pCfmYa7dZC7t0lyAiA
+# Checksum: wc2T2F5RV0p9rlhkDDhuCw
 # Updated: 25 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -218,6 +218,7 @@
 .adtoma.com/
 .adtooltip&
 .adtrgt.
+.adtwirl.com/
 .adult-adv.com/
 .adult-profit-files2.com/traffic/
 .adultaccessnow.com/
@@ -251,6 +252,7 @@
 .adwires.com/
 .adwork.
 .adworldmedia.
+.adzmob.com/
 .adzs.com/zone_
 .af-market.
 .af-system.net/bnr/
@@ -280,6 +282,7 @@
 .amazon.com/widgets/
 .amazonaws.com/widget/
 .amgdgt.com/
+.amobee.com/
 .ampxchange.com/
 .andomedia.com/ufo.js
 .animecrazy.net/ads/
@@ -849,11 +852,15 @@
 .miva.com/
 .mixpo.com/
 .mixpod.com/ad/
+.mkhoj.com/
 .mlclick.com/
 .mmaaxx.com/
+.mobpartner.mobi/
 .mochiads.com/srv/
 .mofosex.com/footer-
+.mojiva.com/
 .money4ad.com
+.monsoonads.
 .moregamers.
 .mrskin.com/feeds/
 .mrskin.com/js_feeds.
@@ -2375,8 +2382,8 @@
 /relatedads
 /remove_ads.
 /remove_ads2.
-/retrad.
 /RequestAdvertisement.
+/retrad.
 /richOAS.
 /right_ad.
 /right_adengage.
@@ -3626,6 +3633,7 @@ http://video-people.com/img/
 http://video.unrulymedia.com/iframe_
 http://videos.theonion.com/ads/
 http://view.atdmt.
+http://vivamob.net/
 http://void.flirt4e.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
