--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -32,8 +32,6 @@
 .alenty.com/trk/
 .alexametrics.
 .allexperts.com/px/
-.alot.com/js/tracking.js
-.alot.com/tb/cookieWriter.php?
 .altastat.
 .alvenda.com/
 .amazon.com/clog/
@@ -261,7 +259,6 @@
 .freshdeals.com/click/pixel.gif?
 .funstage.com/
 .generaltracking.de/
-.geo.kontagent.net/
 .geo.yahoo.com/
 .geobytes.com/gd?
 .geovisite.com
@@ -381,12 +378,10 @@
 .mediatracker.co.nz/
 .megastat.net/
 .met.vgwort.de/na/
-.metacafe.com/debugToSysLog.
 .meteorsolutions.com/
 .metricsdirect.com/
 .microcounter.
 .microsoft.com/library/svy/
-.microsoft.com/LTS/
 .midphase.com/newaff/img.pl?
 .mikrocontroller.net/banner/
 .millioncounter.
@@ -454,7 +449,6 @@
 .p0.com/1x1
 .pardot.com/analytics?
 .performgroup.com/
-.perlentaucher.de/cgi-bin/blanky?
 .petri.co.il/akit/?
 .phonalytics.com/
 .php?refcode=
@@ -695,7 +689,6 @@
 .youtube-nocookie.com/gen_204?
 .youtube.com/s?
 .youtube.com/tracker
-.ytmnd.com/assets/images/blank.gif
 .zroitracker.com/
 /0pixel.php?
 /1.1/1.gif?
@@ -1065,6 +1058,7 @@
 /myopslogger.aspx?
 /mystats.asp?
 /nedstat.js
+/nedstat/
 /neocounter
 /netcounter?
 /netgraviton.net/
@@ -1511,7 +1505,6 @@ http://counter2.
 http://counters.
 http://counting.
 http://countyou.de/track/
-http://creativecommons.org/apps/triples?
 http://cts-log.channelintelligence.com/
 http://cts.channelintelligence.
 http://cts.tradepub.
