--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wc2T2F5RV0p9rlhkDDhuCw
+# Checksum: 6teA5CYkh4kwxhzifHPBZA
 # Updated: 25 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3688,6 +3688,7 @@ http://xxxvipporno.com/xxxvip.gif
 http://yanks-hosted.com/
 http://yieldbuild.com/
 http://yx0banners.com/
+http://ytmnd.com/ugh
 http://zozocash.biz/go/
 https://ads.returnpath.net/
 https://adserv
