--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6teA5CYkh4kwxhzifHPBZA
-# Updated: 25 Aug 2010
+# Checksum: GXBbrSaf+3Mb0uhOw2Ksfg
+# Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -824,6 +824,7 @@
 .meadigital.com/
 .media-general.
 .media-servers.net
+.mediaforge.com/
 .media-toolbar.com/
 .mediag4.com/
 .mediagridwork.
