--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -174,7 +174,7 @@
 .countertracker.
 .counterwelt.de/track/
 .countomat.com/
-.countomat.com/
+.clickintext.net/
 .cpcmanager.
 .cqcounter.
 .creditcards.com/sb.php?
@@ -756,7 +756,6 @@
 /beacon/b.ashx?
 /beaconimg.php?
 /bebj.com/bcounter.php?
-/bee8.info/
 /BehaviourCaptureHandler
 /bi_affiliate.js?
 /bin/reff.php
@@ -864,6 +863,7 @@
 /countercity
 /counters.aspx?
 /countstat.php?
+/countus.php
 /cqcounter.
 /CreateVIDCookie.aspx?
 /cs_api/log
