--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GXBbrSaf+3Mb0uhOw2Ksfg
+# Checksum: jkpcwanTn6JhlCDWsgKckg
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -780,6 +780,7 @@
 .lijit.com/delivery/
 .lingospot.
 .link.ru/
+.linkbucks.com/Track.
 .linkads.de/
 .linkbucks.com/Frame.aspx?
 .linkbuddies.
