--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jkpcwanTn6JhlCDWsgKckg
+# Checksum: 2aJxTEKjvLNi7IPM8Q6Yaw
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2365,6 +2365,8 @@
 /publicidad_
 /publicidade/
 /pyv_watch_request_ad.
+/quad.php
+/QuadAdvert.
 /quigo_ad
 /radioAdEmbed.
 /radioAdEmbedGenre.
