--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2aJxTEKjvLNi7IPM8Q6Yaw
+# Checksum: ai7HV+leaL5vb1Bs+7YFgw
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2132,6 +2132,7 @@
 /html/ads_
 /ifb/google_afc.
 /iframe.ad/
+/iframead_
 /iframe/ad/
 /iframe/ads/
 /iframe_ad_
