--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -258,6 +258,8 @@
 .freestats.com/
 .freshdeals.com/click/pixel.gif?
 .funstage.com/
+.gamezone.com/site/linktracker.
+.gamezone.com/?ACT
 .generaltracking.de/
 .geo.yahoo.com/
 .geobytes.com/gd?
