--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ai7HV+leaL5vb1Bs+7YFgw
+# Checksum: bZo8tKjGtcQdrC7PhwHBZA
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -736,6 +736,7 @@
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
+.jdproject.net/
 .jame-world.com/_pic/adv/
 .japantimes.co.jp/ads/
 .jdoqocy.
@@ -1134,6 +1135,7 @@
 .teendestruction.com/
 .teltarif.de/ad
 .testberichte.org/gads/
+.telemetryverification.net/
 .testseek.com/price_pricegrabber_
 .text-link-ads.
 .textads.
