--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bZo8tKjGtcQdrC7PhwHBZA
+# Checksum: QRt3nCfGeCQjpgvQk+IyTg
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -736,11 +736,11 @@
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
-.jdproject.net/
 .jame-world.com/_pic/adv/
 .japantimes.co.jp/ads/
 .jdoqocy.
 .jdoqocy.
+.jdproject.net/
 .jetrun.jp/
 .jobtarget.com/distrib_pages/
 .jobzonen.dk/external/
@@ -781,9 +781,9 @@
 .lijit.com/delivery/
 .lingospot.
 .link.ru/
-.linkbucks.com/Track.
 .linkads.de/
 .linkbucks.com/Frame.aspx?
+.linkbucks.com/Track.
 .linkbuddies.
 .linkexchange
 .linkgrand.
@@ -826,8 +826,8 @@
 .meadigital.com/
 .media-general.
 .media-servers.net
-.mediaforge.com/
 .media-toolbar.com/
+.mediaforge.com/
 .mediag4.com/
 .mediagridwork.
 .medialand.ru/
@@ -1133,9 +1133,9 @@
 .technoratimedia.com/
 .techsupportforum.com/images/banners/
 .teendestruction.com/
+.telemetryverification.net/
 .teltarif.de/ad
 .testberichte.org/gads/
-.telemetryverification.net/
 .testseek.com/price_pricegrabber_
 .text-link-ads.
 .textads.
@@ -2134,12 +2134,12 @@
 /html/ads_
 /ifb/google_afc.
 /iframe.ad/
-/iframead_
 /iframe/ad/
 /iframe/ads/
 /iframe_ad_
 /iframe_ads?
 /iframe_chitika_
+/iframead_
 /iframes/adbrite.
 /image/ads/
 /image/ads/
@@ -2927,6 +2927,7 @@ _ad_one.html?
 _ad_page_
 _ad_placeholder-
 _ad_renderer_
+_ad_small.
 _adcall.php/
 _adcom.php?
 _adengage_
@@ -3694,8 +3695,8 @@ http://xmlconfig.ltassrv.com/
 http://xxxvipporno.com/xxxvip.gif
 http://yanks-hosted.com/
 http://yieldbuild.com/
-http://yx0banners.com/
 http://ytmnd.com/ugh
+http://yx0banners.com/
 http://zozocash.biz/go/
 https://ads.returnpath.net/
 https://adserv
