--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -15,6 +15,7 @@
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
+.mpression.net/
 .net-filter.com/
 .net/Ads/
 .netklix.com/
