--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QRt3nCfGeCQjpgvQk+IyTg
+# Checksum: vtdpgx3+f3WOOsRIgESsFA
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1721,6 +1721,7 @@
 /adsense-
 /adsense.html?
 /adsense/
+/adsense?
 /adsense_
 /adsensecamp.com/
 /adsensev
