--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vtdpgx3+f3WOOsRIgESsFA
+# Checksum: QkXYsxsWKcV1mH63oD3HSg
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -972,6 +972,7 @@
 .pgpartner.com/
 .pheedo.com/img.phdo?
 .photosupload.net/photosupload.js
+.php/ads/
 .php?affid=
 .picadmedia.
 .pinballpublishernetwork.
