--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QkXYsxsWKcV1mH63oD3HSg
+# Checksum: 13jbhWeHXzTorBjk9+yGjA
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1026,6 +1026,7 @@
 .reklamport.
 .reklamz.com/
 .reliablebanners.
+.reporo.net/
 .reprak.com/
 .rexbucks.com/
 .ricead.com/
