--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 13jbhWeHXzTorBjk9+yGjA
+# Checksum: wQJhEL0Hcdvb8pKzVlrBPA
 # Updated: 26 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1126,6 +1126,7 @@
 .swf?link1=http
 .swiftco.net/banner/
 .symbiosting.com/LogicBuy/
+.tacoda.net/
 .targetpoint.com/
 .targetspot.com/player/
 .tattomedia.
